# sharefie-api-tui

./: README.md  pyproject.toml  setup.py
docs/: config.ini.sample
sharefile-tui/: configuration.py  tui.py
sharefile_tui/: tui.py
