[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_kriipke"
version = "0.0.1"
authors = [
  { name="kriipke", email="mail@kriipke.io" },
]
description = "test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kriipke/test-python-package"
"Bug Tracker" = "https://github.com/kriipke/test-python-package/issues"
